--- a/_posts/2025-08-09-cpp-auto.md
+++ b/_posts/2025-08-09-cpp-auto.md
@@ -1,7 +1,7 @@
 ---
 title: A Deep Dive into C++'s `auto` Keyword
 date: 2025-08-09
-categories: [dev]
+categories: [dev, cpp]
 tags: [cpp, auto, type-deduction, c++11, modern-cpp]
 ---
 
