--- a/_posts/2025-06-09-about-p-np.md
+++ b/_posts/2025-06-09-about-p-np.md
@@ -1,5 +1,5 @@
 ---
-title: P, NP, NP-hard, NP-complete: Complete explanation
+title: P, NP, NP-hard, NP-complete - Complete explanation
 date: 2025-06-09
 categories: [dev, algorithm]
 tags: [algorithm, p, np, np-hard, np-complete]
