--- a/_posts/2025-08-09-cpp-auto.md
+++ b/_posts/2025-08-09-cpp-auto.md
@@ -1,5 +1,5 @@
 ---
-title: A Deep Dive into C++'s `auto` Keyword
+title: A Deep Dive into C++'s auto Keyword
 date: 2025-08-09
 categories: [dev, cpp]
 tags: [cpp, auto, type-deduction, c++11, modern-cpp]
