--- a/_posts/2025-08-11-about-awk.md
+++ b/_posts/2025-08-11-about-awk.md
@@ -1,8 +1,8 @@
 ---
 title: awk for beginners
 date: 2025-08-11
-categories: [dev, gnu]
-tags: [awk]
+categories: [dev, linux]
+tags: [awk, gnu]
 ---
 
 
