--- a/_posts/2025-08-09-cpp-auto.md
+++ b/_posts/2025-08-09-cpp-auto.md
@@ -1,5 +1,5 @@
 ---
-title: A Deep Dive into C++'s auto Keyword
+title: C++'s auto Keyword
 date: 2025-08-09
 categories: [dev, cpp]
 tags: [cpp, auto, type-deduction, c++11, modern-cpp]
@@ -23,7 +23,11 @@ auto s = "hi";  // Deduced as const char*
 
 ### Compile-Time Type Deduction
 
-The type deduction for `auto` happens entirely at **compile time**, not at runtime. There is no performance overhead. It’s syntactic sugar for writing the type explicitly, making the compiler do the work for you.
+The type deduction for `auto` happens entirely at **compile time**, not at runtime.
+
+There is no performance overhead.
+
+It’s syntactic sugar for writing the type explicitly, making the compiler do the work for you.
 
 The deduction mechanism is the same one used for template function arguments, so understanding template type deduction helps in mastering `auto`.
 
