--- a/_posts/2025-08-11-about-awk.md
+++ b/_posts/2025-08-11-about-awk.md
@@ -57,7 +57,7 @@ This command checks if the second field (`$2`, representing salary) is greater t
 
 One of the most powerful functions in awk is `sub()`, which lets you substitute text within a line.
 
-Example Task: You have a file with tags like ![](Picture.jpg) and you want to replace them with sequentially numbered image names(![](image1.png), ![](image2.png), ...).
+Example Task: You have a file with tags like (Picture.jpg) and you want to replace them with sequentially numbered image names(image1.png, image2.png), ...).
 
 ```shell
 awk 'BEGIN {i=0} {if($0 ~ /Picture.*\.jpg/){sub(/Picture.*\.jpg/,"image"(i+=2)".png");} print}' input.txt > output.txt
