--- a/_posts/2025-08-11-about-oop.md
+++ b/_posts/2025-08-11-about-oop.md
@@ -1,5 +1,5 @@
 ---
-title: "A Deep Dive into Object-Oriented Programming in C++"
+title: "C++ Object-Oriented Programming"
 date: 2025-08-11
 categories: [dev, cpp]
 tags: [cpp, oop, class]
