--- a/_posts/2025-08-11-about-awk.md
+++ b/_posts/2025-08-11-about-awk.md
@@ -11,7 +11,10 @@ tags: [awk, gnu]
 You've been introduced to a powerful command-line tool, awk, that can save you a ton of time when processing text files.
 Let's break down what awk is and how you can use it for practical tasks.
 
-### What is awk?
+
+---
+
+#### What is awk?
 
 awk is a programming language specifically designed for scanning patterns and processing text data.
 It's a fundamental utility on Unix-like operating systems that works with structured text files, like logs or data reports.
@@ -74,7 +77,10 @@ This is what makes the numbers increment for each substitution: image1.png, imag
 
 ---
 
-### Why Use awk?
+
+---
+
+#### Why Use awk?
 
 awk is useful for tasks like:
 - Report generation: Quickly summarizing data from log files.
