--- a/_posts/2025-08-11-about-oop.md
+++ b/_posts/2025-08-11-about-oop.md
@@ -9,7 +9,10 @@ Object-Oriented Programming (OOP) is more than just a programming style; it's a 
 
 This post will guide you through the core concepts of OOP, moving from the "why" to the "how," with practical C++ examples to solidify your understanding.
 
-## From Old School to New School: Procedural vs. Object-Oriented
+
+---
+
+### From Old School to New School: Procedural vs. Object-Oriented
 
 Before OOP, the dominant paradigm was **Procedural Programming**, as seen in languages like C. This approach organizes a program around procedures, or functions, that operate on data.
 
@@ -50,7 +53,10 @@ This works for simple programs, but it has significant drawbacks as projects gro
 
 OOP was born from the need to solve these problems by bundling data and the functions that operate on that data into a single unit.
 
-## The Core of OOP: Objects
+
+---
+
+#### The Core of OOP: Objects
 
 Think about the real world. It's filled with objects: cars, dogs, computers, people. Each object has **attributes** (properties or state) and **behaviors** (actions it can perform).
 
@@ -59,13 +65,19 @@ Think about the real world. It's filled with objects: cars, dogs, computers, peo
 
 In OOP, we model software in a similar way. An **object** is a self-contained unit that bundles together data (attributes) and the functions that work on that data (behaviors).
 
-## Blueprints for Objects: Classes
+
+---
+
+#### Blueprints for Objects: Classes
 
 If an object is a specific thing (like *my* car), a **class** is the blueprint that defines how to make that thing. It's a template that describes the attributes and behaviors that all objects of a certain type will have.
 
 In C++, we use the `class` keyword to define this blueprint. Let's create a blueprint for a `BankAccount`.
 
 ```cpp
+#include <iostream>
+#include <string>
+
 class BankAccount {
 public:
     // Attributes (Member Variables)
@@ -84,14 +96,27 @@ public:
     }
 
     void displayBalance() {
-        // Implementation to show the balance
+        std::cout << "Account Holder: " << accountHolderName << ", Balance: " << balance << std::endl;
     }
 };
+
+int main() {
+    BankAccount myAccount;
+    myAccount.accountHolderName = "Jane Doe";
+    myAccount.balance = 1000.0;
+    myAccount.displayBalance();
+    myAccount.deposit(500.0);
+    myAccount.displayBalance();
+    return 0;
+}
 ```
 
 This `BankAccount` class defines that any object created from it will have a `accountHolderName`, a `balance`, and the ability to `deposit`, `withdraw`, and `displayBalance`.
 
-## The Principle of Encapsulation: Protecting Your Data
+
+---
+
+#### The Principle of Encapsulation: Protecting Your Data
 
 The class above has a major flaw: anyone can directly access and modify its member variables.
 
@@ -154,7 +179,10 @@ public:
 ```
 Now, the `balance` can only be modified through the `deposit` and `withdraw` methods, which contain logic to prevent invalid operations. This makes our code safer, more predictable, and easier to debug.
 
-## Bringing Classes to Life: Creating and Using Objects
+
+---
+
+#### Bringing Classes to Life: Creating and Using Objects
 
 Defining a class doesn't create any objects; it just defines the template. To create an actual object, we **instantiate** the class.
 
@@ -201,7 +229,10 @@ int main() {
 *   Each object has its own distinct set of member variables (`accountHolderName` and `balance`).
 *   We interact with the objects using their public member functions (the "interface"). We cannot directly write `johnsAccount.balance = 50;`.
 
-## Beyond the Basics: Other Pillars of OOP
+
+---
+
+#### Beyond the Basics: Other Pillars of OOP
 
 Classes and Objects are just the beginning. OOP is supported by three other major concepts:
 
@@ -209,6 +240,9 @@ Classes and Objects are just the beginning. OOP is supported by three other majo
 2.  **Polymorphism:** Allows objects of different classes to be treated as objects of a common parent class. The most common use is overriding a parent method in a child class to provide a more specific implementation. This enables flexibility and dynamic behavior.
 3.  **Abstraction:** Hides complex implementation details and shows only the essential features of the object. In our example, the user of the `BankAccount` class doesn't need to know *how* the `withdraw` method works internally, only that it can be called.
 
-## Conclusion
+
+---
+
+#### Conclusion
 
 Object-Oriented Programming in C++ is a fundamental shift from procedural thinking. By organizing your code into classes that model real-world or conceptual objects, you create software that is more intuitive, reusable, and scalable. Mastering encapsulation by default and building clear public interfaces for your objects will dramatically improve the quality and longevity of your code.
