update post about ruby.

--- a/_posts/2025-09-09-ruby.md
+++ b/_posts/2025-09-09-ruby.md
@@ -16,27 +16,33 @@ Think of the Ruby world as three stacked Lego bricks:
 
 Below is the long-form tour.
 
-- Ruby
- An interpreted, object-oriented scripting language (like Python, Perl, Lua).
- Ships with a small standard library (File, Net::HTTP, JSON, etc.).
- Anything not in the standard library has to be installed separately → enter “gems”.
+#### Ruby
 
- - Gem
+An interpreted, object-oriented scripting language (like Python, Perl, Lua).
+Ships with a small standard library (File, Net::HTTP, JSON, etc.).
+Anything not in the standard library has to be installed separately → enter “gems”.
+
+#### Gem
+
 A gem is a plain `*.gem` file: code + metadata (name, version, author, dependencies).  
-gem install rails downloads the rails gem and its runtime dependencies into the system-wide Ruby installation (by default under …/ruby/X.Y.Z/lib/ruby/gems/…).
-gem list, gem uninstall, gem push etc. are the low-level tools.
-Gems are global unless you fiddle with GEM_HOME/GEM_PATH.
-Problem: two projects on the same machine may need different versions of the same gem → version conflicts.
+`gem install` rails downloads the rails gem and its dependencies.
+- To install into the user local directory(`~/.local/share/gem/ruby/3.4.0/gems`), use `gem install`.
+- To install into the system wide direcotry(`/usr/lib/ruby/gems/3.4.0/gems`), use `gem --no-user-install install bundler`.
 
-- Bundler (bundle, bundler)
+**NOTE**: You can check environment variables related to Gem by `gem env`.
 
-Bundler is itself a gem (gem install bundler).
-Adds a project layer: every project gets its own Gemfile that declares exact gems + versions it needs.
-Running `bundle install`
+
+#### Bundler (bundle, bundler)
+
+Bundler is itself a gem (can be installed by `gem install bundler`).  
+It adds a project layer: every project gets its own Gemfile that declares exact gems + versions it needs.  
+Running `bundle install`:  
 – computes a full dependency graph,
 – writes the exact snapshot to Gemfile.lock,
 – downloads missing gems,
 – can optionally keep them inside the project (vendor/bundle) or in a shared path by `bundle config set --local path 'vendor/bundle'`
+
+---
 
 ### Typical workflow
 
